--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dice Roller</string>
-    <string name="roll_label">Roll</string>
+    <string name="roll_label">Let\'s roll, babe</string>
     <string name="dice_rolled_label">Dice Rolled!</string>
+    <string name="dice_image_description">Dice roll result</string>
 </resources>
